tests/baselines/reference/ExportVariableWithAccessibleTypeInTypeAnnotation.errors.txt
ExportVariableWithAccessibleTypeInTypeAnnotation.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== ExportVariableWithAccessibleTypeInTypeAnnotation.ts (1 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        export interface Point {
            x: number;
            y: number;
        }
    
        // valid since Point is exported
        export var Origin: Point = { x: 0, y: 0 };
    }
    